# api/go/v1alpha1/model.pb.go
@@ -1505,9 +1505,7 @@ func (x *CloneUrls) GetHttpUrl() string {
 
 type Revision struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
-	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
-	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
-	CreatedAt     string                 `protobuf:"bytes,3,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
+	Name          string                 `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -1542,23 +1540,9 @@ func (*Revision) Descriptor() ([]byte, []int) {
 	return file_v1alpha1_model_proto_rawDescGZIP(), []int{24}
 }
 
-func (x *Revision) GetId() string {
-	if x != nil {
-		return x.Id
-	}
-	return ""
-}
-
 func (x *Revision) GetName() string {
 	if x != nil {
 		return x.Name
-	}
-	return ""
-}
-
-func (x *Revision) GetCreatedAt() string {
-	if x != nil {
-		return x.CreatedAt
 	}
 	return ""
 }
@@ -1924,12 +1908,9 @@ const file_v1alpha1_model_proto_rawDesc = "" +
 	"\x0fparameter_count\x18\f \x01(\tR\x0eparameterCount\"?\n" +
 	"\tCloneUrls\x12\x17\n" +
 	"\assh_url\x18\x01 \x01(\tR\x06sshUrl\x12\x19\n" +
-	"\bhttp_url\x18\x02 \x01(\tR\ahttpUrl\"M\n" +
-	"\bRevision\x12\x0e\n" +
-	"\x02id\x18\x01 \x01(\tR\x02id\x12\x12\n" +
-	"\x04name\x18\x02 \x01(\tR\x04name\x12\x1d\n" +
-	"\n" +
-	"created_at\x18\x03 \x01(\tR\tcreatedAt\"\xd5\x02\n" +
+	"\bhttp_url\x18\x02 \x01(\tR\ahttpUrl\"\x1e\n" +
+	"\bRevision\x12\x12\n" +
+	"\x04name\x18\x01 \x01(\tR\x04name\"\xd5\x02\n" +
 	"\x06Commit\x12\x0e\n" +
 	"\x02id\x18\x01 \x01(\tR\x02id\x12\x18\n" +
 	"\amessage\x18\x02 \x01(\tR\amessage\x12\x1f\n" +
