# api/openapiv2/v1alpha1/dataset.swagger.json
@@ -768,13 +768,7 @@
     "v1alpha1Revision": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "string"
-        },
         "name": {
-          "type": "string"
-        },
-        "createdAt": {
           "type": "string"
         }
       }
