# api/ts/v1alpha1/model.pb.ts
@@ -155,9 +155,7 @@ export type CloneUrls = {
 }
 
 export type Revision = {
-  id?: string
   name?: string
-  createdAt?: string
 }
 
 export type Commit = {
